--- a/index.html
+++ b/index.html
@@ -143,9 +143,7 @@
                   <h6 class="u-text u-text-palette-1-base u-text-1">Our Solutions</h6>
                   <h5 class="u-align-justify u-custom-font u-text u-text-font u-text-2">
 
-
-                    Entropy <sup>beta</sup> enables pragmatic decision-making in digital markets by unlocking the hidden value of web3 data.
-                    web3 introduces decentralization and token-based economics powered by Blockchain and Crypto, which power Internet/Metaverse goods, services, and communities.
+                    Entropy enables pragmatic digital decision-making by unlocking the hidden value of web3 data.
       
                   </h5>
                   <a target="_blank" href="https://entropy.co" class="u-active-none u-btn u-button-style u-hover-none u-none u-text-black u-text-hover-palette-2-base u-btn-1"><span class="u-icon u-text-palette-1-base u-icon-1">
